src/components/projects/styles.scss
@import "../../styles/global/variables";

.projects {
  padding: 5rem 0 2.5rem 0;
  display: flex;
  flex-direction: column;
  align-items: center;

  &__title {
    font-size: 2.1rem;
    color: $color-primary;
  }

  &__container {
    width: 100%;
    max-width: 58rem;
    padding: 2.5rem;
  }

  &__line {
    border-top: 1px solid rgba(0, 0, 0, 0.25);
    margin: 5rem 0;
  }
}

.project {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 3rem;
  transition: opacity 1s;

  &--hidden {
    opacity: 0;
  }

  // col-1
  &__name {
    font-size: 1.75rem;
    margin-bottom: 1.5rem;
  }

  &__image {
    width: 100%;
    margin-bottom: 2rem;
    box-shadow: 0 7.5px 25px rgba(0, 0, 0, 0.2);

    & img {
      width: 100%;
      height: 100%;
      display: block;
    }
  }

  &__buttons {
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    margin-bottom: 1.5rem;

    & button {
      margin-right: 1.5rem;
      border-radius: 5px;
      color: #fff;
      font-weight: 600;
      border: none;
      background-color: $color-primary;
      padding: 0.85rem 1.25rem;
      cursor: pointer;
      margin-bottom: 0.75rem;
      transition: 0.5s;
      box-shadow: 0 10px 10px -5px rgba(0, 0, 0, 0.3);

      & i {
        margin-right: 0.25rem;
      }

      &:hover {
        box-shadow: 0 30px 15px -10px rgba(0, 0, 0, 0.2);
        transform: translateY(-5px);
        border-radius: 20px;
        animation-duration: 1.5s;
        animation-delay: 0.3s;
        animation-timing-function: linear;
        animation-iteration-count: infinite;
        animation-direction: alternate;
      }
    }
  }

  &__description--grid-1 {
    display: grid;
    grid-template-columns: repeat(auto-fill, 9.5rem);
    row-gap: 1rem;
    margin-top: 1rem;

    & p {
      position: relative;
      margin-left: 1.25rem;

      & i {
        position: absolute;
        top: 0.3rem;
        left: -1.25rem;
        font-size: 0.5rem;
      }
    }
  }

  // col-2
  &__title {
    font-size: 1.25rem;
    margin-bottom: 0.75rem;

    &:first-child {
      margin-top: 3.5rem;
    }
  }

  &__description {
    margin-bottom: 2.5rem;

    &--grid-2 {
      display: flex;
      flex-direction: column;

      & p {
        position: relative;
        margin-left: 1.25rem;
        margin-top: 1rem;

        &:first-child {
          margin-top: 0;
        }

        & i {
          position: absolute;
          top: 0.3rem;
          left: -1.25rem;
          font-size: 0.5rem;
        }
      }
    }
  }

  &__text--highlight {
    color: $color-primary;
    font-weight: 600;
  }
}

@media only screen and (max-width: 675px) {
  .project {
    display: flex;
    flex-direction: column;

    &__name {
      text-align: center;
    }

    &__title:first-child {
      margin-top: 0;
    }
  }
}

